# authy

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  package-lock.json  package.json
src/: App.tsx  auth.css  aws-exports.ts  main.rs  main.tsx  main_test.rs
src/auth/: mod.rs
src/config/: mod.rs
src/context/: AuthContext.tsx
src/error/: mod.rs
src/middleware/: mod.rs
src/pages/: Dashboard.tsx  Login.tsx
src/proxy/: mod.rs
src/session/: mod.rs
