[package]
name = "authy"
version = "0.1.0"
edition = "2021"
description = "OAuth2 authentication gateway using AWS Cognito"

[dependencies]
axum = { version = "0.7", features = ["http2"] }
tokio = { version = "1.35", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
hyper = { version = "1.1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "9.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenv = "0.15"
thiserror = "1.0"
url = "2.5"

[dev-dependencies]
mockall = "0.12"
wiremock = "0.5"
tokio-test = "0.4"
tower-test = "0.4"
http-body-util = "0.1"
assert_matches = "1.5"
